correct text squeeze for path on smallest screen size

--- a/src/styles/NavBar.css
+++ b/src/styles/NavBar.css
@@ -144,9 +144,15 @@
     white-space: pre-wrap;
 }
 
-@media only screen and (max-width: 340px) {
+@media only screen and (max-width: 360px) {
     .path-container__path{
         font-size: 0.8rem;
+    }
+  }
+
+@media only screen and (max-width: 300px) {
+    .path-container__path{
+        font-size: 0.75rem;
     }
   }
 
